fix z-index issue

--- a/css/main.less
+++ b/css/main.less
@@ -78,7 +78,7 @@ body, blockquote p, .tooltip-inner {
 		width: 600px;
 		height: 100%;
 		top: 0;
-		z-index: 10;
+		z-index: 20;
 	}
 	&:before {
 		right: -602px;
@@ -218,7 +218,7 @@ body, blockquote p, .tooltip-inner {
 		left: 0;
 		width: 0;
 		height: 45px;
-		z-index: 20;
+		z-index: 30;
 	}
 	#page:after {
 		content: "";
